// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. renders correctly with an image lead asset 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <figure
    margin={0}
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr"
      paddingBottom="56.25%"
      position="relative"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        height="100%"
        position="absolute"
        width="100%"
      >
        <div
          display="table"
          height={0}
          overflow="hidden"
          paddingBottom="56.25%"
          position="relative"
          width="100%"
        >
          <img
            alt="Chris Reynolds Gordon at one of his party venues in London"
            display="block"
            opacity={1}
            position="absolute"
            src="https://crop169.io/?resize=360"
            srcSet="https://crop169.io/?resize=360 360w,https://crop169.io/?resize=520 520w,https://crop169.io/?resize=680 680w,https://crop169.io/?resize=860 860w,https://crop169.io/?resize=1200 1200w,https://crop169.io/?resize=1500 1500w"
            width="100%"
            zIndex={2}
          />
        </div>
      </div>
    </div>
    <figcaption>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`2. renders correctly with a video lead asset 1`] = `
<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <figure
    margin={0}
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr"
      paddingBottom="56.25%"
      position="relative"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        height="100%"
        position="absolute"
        width="100%"
      >
        <Video
          accountId="1234"
          height="100%"
          id="aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee"
          is360={false}
          playerId="3456"
          policyKey="policyKey"
          position="absolute"
          poster={
            Object {
              "uri": "https://crop169.io/",
            }
          }
          videoId="5678"
          width="100%"
        />
      </div>
    </div>
    <figcaption>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;

exports[`3. renders correctly when there is no lead asset 1`] = `null`;

exports[`4. correctly renders when there is no displayimage 1`] = `null`;

exports[`5. it renders correctly with a classname 1`] = `
<div
  className="test-class-name tc-view__TcView-nuazoi-0 fPjBcr"
>
  <figure
    margin={0}
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr"
      paddingBottom="56.25%"
      position="relative"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr"
        height="100%"
        position="absolute"
        width="100%"
      >
        <div
          display="table"
          height={0}
          overflow="hidden"
          paddingBottom="56.25%"
          position="relative"
          width="100%"
        >
          <img
            alt="Chris Reynolds Gordon at one of his party venues in London"
            display="block"
            opacity={1}
            position="absolute"
            src="https://crop169.io/?resize=360"
            srcSet="https://crop169.io/?resize=360 360w,https://crop169.io/?resize=520 520w,https://crop169.io/?resize=680 680w,https://crop169.io/?resize=860 860w,https://crop169.io/?resize=1200 1200w,https://crop169.io/?resize=1500 1500w"
            width="100%"
            zIndex={2}
          />
        </div>
      </div>
    </div>
    <figcaption>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        Chris Reynolds Gordon at one of his party venues in London
      </div>
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf"
      >
        The credits
      </div>
    </figcaption>
  </figure>
</div>
`;
